--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F3F3F</color>
     <color name="colorPrimaryDark">#3F3F3F</color>
-    <color name="colorAccent">#3F3F3F</color>
+    <color name="colorAccent">#FFFFFFFF</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
