--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -70,7 +70,7 @@
         android:fontFamily="@font/montserrat"
         android:gravity="center_horizontal"
         android:singleLine="false"
-        android:text="@string/find_a_team_in_you_city_and_dominate_the_league"
+        android:text="@string/find_team"
         android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
